# namespaces.py

./: .gitignore  LICENSE  README.md  mod.c  pyproject.toml  setup.py
.github/workflows/: build.yml
namespaces.py.egg-info/: PKG-INFO  SOURCES.txt
